Fjern unødvendige java options